--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,15 @@
-version: '3'
+version: '3.1'
 services:
   web:
-    build: .
-    command: npm start
-    volumes:
-      - ./src:/usr/app/
-      - /data/app/node-app
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - 8081:8081
+     - "8081:8081"
+    volumes:
+     - .:/code
+     - /code/node_modules
+    depends_on:
+     -  "express"
+  redis:
+    image: redis:alpine
