--- a/spring-boot-app/Dockerfile
+++ b/spring-boot-app/Dockerfile
@@ -1,7 +1,7 @@
-FROM openjdk:8-jdk-alpine
-RUN apk add --no-cache git
-RUN apk add --no-cache openssh
-WORKDIR /data/app
+FROM maven:3-openjdk-8
 RUN git clone https://github.com/kkenan/basic-microservices /data/app
-RUN rm -R node-app
 WORKDIR /data/app/spring-boot-app
+RUN rm -R node-app
+RUN ["mvn", "package"]
+EXPOSE 8080
+CMD ["java","-jar","target/spring-boot-app-1.0-SNAPSHOT.jar"]
