--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   #Spring boot app service
-  backend:
+  spring_boot_app:
     container_name: spring_boot_app
     build:
       context: ./spring-boot-app
@@ -11,10 +11,11 @@ services:
     depends_on:
       - "db"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/demodb
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/demodb
+      APP_NODE_URL: http://node_app:8081/
 
   #Node app service
-  frontend:
+  node_app:
     container_name: node_app
     build:
       context: ./node-app
